--- a/index.html
+++ b/index.html
@@ -617,8 +617,8 @@
           Your Look Your Beauty
         </li>
         <li class="contact-list__contact" itemprop="email">
-          <a href="mailto:%20info@yourlookyourbeauty.nl" title="Email ons"
-            >info@yourlookyourbeauty.nl</a
+          <a href="mailto:%20yourlookyourbeauty@outlook.com" title="Email ons"
+            >yourlookyourbeauty@outlook.com</a
           >
         </li>
         <li class="contact-list__contact" itemprop="tel">
